[package]
name = "webrtc-client"
version = "0.1.0"
edition = "2021"

[dependencies]
opencv = { version = "0.92.0", features = ["clang-runtime"] }
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
webrtc = "0.11.0"
